[PS-1840] - fix for covered dropdown on empty vault (#4019)
* fix for covered dropdown on empty vault

This could be done one of 2-3 ways. I think this might be the least problematic, but could also be done with just changing "position: absolute" to "relative on the ".no-items" class - base.css:461 For some reason, I'm unable to load the spinner to test.

* rename class

--- a/apps/browser/src/popup/scss/misc.scss
+++ b/apps/browser/src/popup/scss/misc.scss
@@ -135,6 +135,11 @@ p.lead {
   border-radius: $border-radius;
 }
 
+.select-index-top {
+  position: relative;
+  z-index: 100;
+}
+
 .sr-only {
   position: absolute !important;
   width: 1px !important;
